[package]
authors = ["Witnet Foundation <info@witnet.foundation>"]
categories = ["algorithms", "cryptography"]
description = "Open source implementation of Bonneh-Lynn-Shacham (BLS) signatures written in Rust"
documentation = "https://docs.rs/bls-signatures-rs/"
edition = "2018"
exclude = ["/.travis.yml"]
homepage = "https://github.com/witnet/bls-signatures-rs"
keywords = ["bls", "Bonneh-Lynn-Shacham", "bn256"]
license = "MIT"
name = "bls-signatures-rs"
readme = "README.md"
repository = "https://github.com/witnet/bls-signatures-rs"
version = "0.1.0"

[dependencies]
bn = {package = "witnet-bn", version = "0.4.5"}
byteorder = "1.3.4"
digest = "0.8.1"
failure = "0.1.8"
hex = "0.4.2"
# rustc-hex = "2.1.0"
# serde_json = "1.0.52"
sha2 = "0.8.1"

[dev-dependencies]
